test/classes/errors/nilability-init-var/init-var-nonnil-shared-from-oknil-shared.good
init-var-nonnil-shared-from-oknil-shared.chpl:9: error: invalid copy-initialization
init-var-nonnil-shared-from-oknil-shared.chpl:9: error: cannot initialize 'shared MyClass' from a 'shared MyClass?'
